Initial MDLX commit
- Added >800 parsing to the MDLX parser.
- Removed the MDX parser and the MDL code in EditableModel and all of its objects, in favor of the MDLX parser.
- Turned TimelineContainer and AnimatedNode into classes, and put into them generic things that were duplicated across all the objects that implemented them.
- Removed the MdlToken[Input|Output]Stream interface, and instead renamed the "Ghostwolf" classes to them.